+ outline the home page
  - a basic setup of the homepage.  All the links still don't work.

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -1,6 +1,15 @@
 {{define "body"}}
-<div class="jumbotron">
-    <h1>Beaker Skeleton</h1>
-    <p>This is just a starting point.</p>
-</div>
+    <div class="starter-template">
+          <div class="row bottom-buffer"><img src="/imgs/beaker.jpg"/></div>
+          <form class="form col-md-12 center-block">
+            <div class="form-group">
+              <input type="text" class="form-control input-lg" placeholder="SRA Search">
+            </div>
+            <div class="form-group">
+              <button class="btn btn-primary btn-lg btn-block">Search</button>
+              <span class="pull-right"><a href="#">Advanced Search</a></span>
+              <span class="pull-left"><a href="#">Examples</a></span>
+            </div>
+          </form>
+    </div>
 {{end}}
