--- a/web/views/base/header.html
+++ b/web/views/base/header.html
@@ -8,5 +8,6 @@
 <![endif]-->
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/custom.css">
 {{end}}
