+ work so far to implement "accession" view page
  - working in parallel on the "accession" and "search results"
    views.  Both are incomplete.  This is just a freeze point with
    the work I have so far.

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -42,3 +42,181 @@ body {
     border-radius: 0;
     position: relative;
 } 
+
+.ul .block {
+  margin: 48px -395px;
+}
+.block-half {
+  margin: 24px 0;
+}
+.submission {
+  display: inline-block;
+  height: 65px;
+  width: 68%;
+  margin: 0 1.5%;
+  font-family: 'pt_sansbold', Helvetica, sans-serif;
+}
+.submission .label {
+  color: #585c60;
+  margin-top: 10px;
+  text-align: center;
+  font-weight: 600;
+}
+.submission.study .submission-block {
+  background: #e54f1f;
+}
+.submission.r .submission-block {
+  background: #8394bd;
+}
+.submission.julia .submission-block {
+  background: #6cad5a;
+}
+.submission.node .submission-block {
+  background: #8cc64b;
+}
+.submission.python .submission-block {
+  background: #efbe3a;
+}
+.submission.ruby .submission-block {
+  background: #b11400;
+}
+.submission.scala .submission-block {
+  background: #b41703;
+}
+.submission.java .submission-block {
+  background: #eb0000;
+}
+.submission.latex .submission-block {
+  color: #000;
+}
+.submission.javascript .submission-block {
+  background: #f0dd44;
+  color: #4a4a4a;
+}
+.submission.groovy .submission-block {
+  background: #6297aa;
+}
+.submission-block {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  line-height: 70px;
+  font-size: 34px;
+  color: #fff;
+  box-shadow: 0px 2px 5px rgba(0,0,0,0.18);
+}
+.text-center {
+  text-align: center;
+}
+
+.panel
+{
+    position: relative;
+}
+
+.panel-default > .panel-leftheading
+{
+    color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+}
+
+.panel-primary > .panel-leftheading
+{
+    color: #fff;
+    background-color: #428bca;
+    border-color: #428bca;
+}
+
+.panel-success > .panel-leftheading
+{
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
+.panel-info > .panel-leftheading
+{
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
+.panel-warning > .panel-leftheading
+{
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+}
+
+.panel-danger > .panel-leftheading
+{
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
+.panel-leftheading
+{
+    width: 42px;
+    padding: 10px 15px;
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    float: left;
+    height: 100%;
+    position: absolute;
+}
+
+.panel-lefttitle
+{
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 15px;
+    font-size: 18px;
+    font-weight: bold;
+    color: inherit;
+    -webkit-transform: rotate(90deg);
+    -webkit-transform-origin: left top;
+    -moz-transform: rotate(90deg);
+    -moz-transform-origin: left top;
+    -ms-transform: rotate(90deg);
+    -ms-transform-origin: left top;
+    -o-transform: rotate(90deg);
+    -o-transform-origin: left top;
+    transform: rotate(90deg);
+    transform-origin: left top;
+    position: absolute;
+    white-space: nowrap;
+}
+
+.panel-rightbody
+{
+    /* float: left; */
+    margin-left: 45px;
+    padding: 15px;
+}
+
+.section-header {
+	/* position:absolute; */
+	top:15px;
+	left:15px;
+	/* font-size:12px; */
+	font-weight:700;
+	color:#959595;
+	text-transform:uppercase;
+	letter-spacing:10px;
+}
+
+.table-header {
+	/* position:absolute; */
+	top:15px;
+	left:15px;
+	/* font-size:12px; */
+	font-weight:700;
+	color:#959595;
+	text-transform:uppercase;
+	letter-spacing:1px;
+}
