--- a/web/views/results.html
+++ b/web/views/results.html
@@ -22,7 +22,12 @@
             	<div class="row">
             		<a href="#">
                 		<div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-	                    	<img class="img-responsive" src="http://lorempixel.com/400/200/sports/2/" alt="">
+                            <ul class="block text-center">
+                                <li class="submission study">
+                                    <div class="submission-block">St</div>
+                                    <div class="label">Study</div>
+                                </li>
+                            </ul>
                 		</div>
                 		<div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
 	                    	<h3>Result name one</h3>
@@ -35,7 +40,12 @@
             	<div class="row">
             		<a href="#">
                 		<div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-	                    	<img class="img-responsive" src="http://lorempixel.com/400/200/sports/3/" alt="">
+                            <ul class="block text-center">
+                                <li class="submission study">
+                                    <div class="submission-block">St</div>
+                                    <div class="label">Study</div>
+                                </li>
+                            </ul>
                 		</div>
                 		<div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
 	                    	<h3>Blueberry Sport</h3>
@@ -48,7 +58,12 @@
             	<div class="row">
             		<a href="#">
                 		<div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-	                    	<img class="img-responsive" src="http://lorempixel.com/400/200/sports/1/" alt="">
+                            <ul class="block text-center">
+                                <li class="submission study">
+                                    <div class="submission-block">St</div>
+                                    <div class="label">Study</div>
+                                </li>
+                            </ul>
                 		</div>
                 		<div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
 	                    	<h3>Power Thirst</h3>
