+ introduce a basic "search" results page
  - currently it's just a JSON dump of the bleve searchResults output

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -1,7 +1,7 @@
 {{define "body"}}
     <div class="starter-template">
           <div class="row bottom-buffer"><img src="/imgs/beaker.jpg"/></div>
-          <form class="form col-md-12 center-block">
+          <form class="form col-md-12 center-block" action="/search">
             <div class="form-group">
               <input type="text" name="q" class="form-control input-lg" placeholder="SRA Search">
             </div>
