--- a/web/views/search.html
+++ b/web/views/search.html
@@ -1,6 +1,32 @@
 {{define "body"}}
-<div class="jumbotron">
-    <h1>Searching... </h1>
-    <p>for search term: <tt>{{.Query}}</tt></p>
-</div>
+    <div class="starter-template">
+    <ol class="breadcrumb">
+    	<li><a href="#">Search</a></li>
+        <li><a href="#">Page 1</a></li>
+		<li class="pull-right"><a href="" class="text-muted"><i class="fa fa-refresh"></i></a></li>
+	</ol>
+	<div class="row">
+        <form action="/search">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 left-align">
+                <div class="well search-result">
+                    <div class="input-group">
+                    <input type="text" name="q" class="form-control" placeholder="Search" value="{{.Query}}">
+                      <span class="input-group-btn">
+                        <button class="btn btn-info btn-default" type="button">
+                            <i class="glyphicon glyphicon-search"></i>
+                            Search
+                        </button>
+                      </span>
+                    </div>
+                </div>
+                <div class="well search-result">
+                    <div class="row">
+                        <pre>
+                        {{.JsonStr}}
+                        </pre>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 {{end}}
