--- a/web/views/results.html
+++ b/web/views/results.html
@@ -6,7 +6,7 @@
 		<li class="pull-right"><a href="" class="text-muted"><i class="fa fa-refresh"></i></a></li>
 	</ol>
 	<div class="row">
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 left-align">
     		<div class="well search-result">
         		<div class="input-group">
         		<input type="text" class="form-control" placeholder="Search">
