--- a/web/views/search.html
+++ b/web/views/search.html
@@ -20,11 +20,59 @@
                     </div>
                 </div>
                 <div class="well search-result">
+                    <div class="row text-center">
+                        Got {{.searchResults.Total}} Hits.
+                    </div>
+                    {{ range .searchResults.Facets }}
+                    <div class="row text-center">
+                        <ul class="list-inline">
+                        {{ range .Terms }}
+                            <li>{{.Term}}:{{.Count}}</li>
+                        {{ end }}
+                        </ul>
+                    </div>
+                    {{ end }}
+                </div>
+                <div class="well search-result">
                     <div class="row">
                         <pre>
                         {{.JsonStr}}
                         </pre>
                     </div>
+                </div>
+                {{ range .searchResults.Hits }}
+                <div class="well search-result">
+                    <div class="row">
+                        <a href="#">
+                            <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
+                                <ul class="block">
+                                    <li class="submission {{.Fields.Type}}">
+                                    <div class="submission-block">{{shortType .Fields.Type}}</div>
+                                        <div class="label">{{.Fields.Type}}</div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
+                                <h3><a href="/accession/{{.ID}}">{{ .ID }}</a></h3>
+                                <dl class="dl-horizontal">
+                                    <dt>Alias</dt>
+                                    <dd>{{ mapGet .Fields "XML.Alias" }}</dt>
+                                    <dt>Submission ID</dt>
+                                    <dd>{{ mapGet .Fields "SubmissionId" }}</dt>
+                                    <dt>Publish Date</dt>
+                                    <dd>{{ timeFmt .Fields.Published "2006-01-02 15:04:05"}}</dt>
+                                    <dt>Description</dt>
+                                    <dd>{{ mapGet .Fields "XML.Description" }}</dt>
+                                </dl>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {{ end }}
+                <div class="row">
+                    <button type="button" class="btn btn-info  btn-block">
+                        <i class="glyphicon glyphicon-refresh"></i>Load more...
+                    </button>
                 </div>
             </div>
         </form>
