--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -22,6 +22,22 @@ body {
     font-size: 12px;
     color: #333;
 }
+.header-well {
+    border: 0;
+    padding: 5px;
+    min-height: 53px;
+    background: #fff;
+    box-shadow: none;
+    border-radius: 3px;
+    position: relative;
+    max-height: 100000px;
+    border-bottom: 2px solid #ccc;
+    transition: max-height 0.5s ease;
+    -o-transition: max-height 0.5s ease;
+    -ms-transition: max-height 0.5s ease;
+    -moz-transition: max-height 0.5s ease;
+    -webkit-transition: max-height 0.5s ease;
+}
 .well {
     border: 0;
     padding: 20px;
@@ -69,20 +85,21 @@ body {
   margin-top: 10px;
   text-align: center;
   font-weight: 600;
+  padding-left: 31%
 }
 .submission.study .submission-block {
   background: #e54f1f;
 }
-.submission.r .submission-block {
+.submission.sample .submission-block {
   background: #8394bd;
 }
-.submission.julia .submission-block {
+.submission.experiment .submission-block {
   background: #6cad5a;
 }
-.submission.node .submission-block {
+.submission.run .submission-block {
   background: #8cc64b;
 }
-.submission.python .submission-block {
+.submission.analysis .submission-block {
   background: #efbe3a;
 }
 .submission.ruby .submission-block {
