--- a/web/views/search.html
+++ b/web/views/search.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="well search-result">
                     <div class="row text-center">
-                        Got {{.searchResults.Total}} Hits.
+                        Got {{.searchResults.Total}} Hits. Showing results {{.searchResults.Request.From}} - {{add .searchResults.Request.From .searchResults.Request.Size}}
                     </div>
                     {{ range .searchResults.Facets }}
                     <div class="row text-center">
@@ -52,7 +52,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-10 title">
+                            <div class="col-xs-6 col-sm-9 col-md-9 col-lg-9 title">
                                 <h3><a href="/accession/{{.ID}}">{{ .ID }}</a></h3>
                                 <dl class="dl-horizontal">
                                     <dt>Alias</dt>
