+ search page refinements
  - make the search stats and facet groupings report a top level table
  - make the search button work correctly

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -67,6 +67,18 @@ body {
     text-align: left;
 }
 
+.right-align {
+    text-align: right;
+}
+
+.center-align {
+    text-align: center;
+}
+
+.borderless tbody tr td, .borderless tbody tr th, .borderless thead tr th {
+    border: none;
+}
+
 .block {
   margin: 48px 0px;
   padding: 0 0 0 20px;
