--- a/web/views/search.html
+++ b/web/views/search.html
@@ -6,32 +6,56 @@
 		<li class="pull-right"><a href="" class="text-muted"><i class="fa fa-refresh"></i></a></li>
 	</ol>
 	<div class="row">
-        <form action="/search">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 left-align">
                 <div class="well search-result">
-                    <div class="input-group">
-                    <input type="text" name="q" class="form-control" placeholder="Search" value="{{.Query}}">
-                      <span class="input-group-btn">
-                        <button class="btn btn-info btn-default" type="button">
-                            <i class="glyphicon glyphicon-search"></i>
-                            Search
-                        </button>
-                      </span>
-                    </div>
+                    <form action="/search">
+                        <div class="input-group">
+                        <input type="text" name="q" class="form-control" placeholder="Search" value="{{.Query}}">
+                          <span class="input-group-btn">
+                            <button class="btn btn-info btn-default" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                                Search
+                            </button>
+                          </span>
+                        </div>
+                    </form>
                 </div>
                 <div class="well search-result">
-                    <div class="row text-center">
-                        Got {{.searchResults.Total}} Hits. Showing results {{.searchResults.Request.From}} - {{add .searchResults.Request.From .searchResults.Request.Size}}
+                    <div class="row">
+                        <table class="table table-condensed borderless">
+                            <thead>
+                            <tr>
+                                <th colspan=2 class="table-header center-align col-md-6 col-lg-6">Search Stats</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Search Time</th>
+                                <td class="right-align">{{.searchResults.Took}}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Hits</th>
+                                <td class="right-align">{{.searchResults.Total}}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Result Slice</th>
+                                <td class="right-align">{{.searchResults.Request.From}} -
+                                    {{add .searchResults.Request.From .searchResults.Request.Size}}</td>
+                            </tr>
+                            <tr>
+                                <th colspan=2 class="table-header center-align col-md-6 col-lg-6">Groupings</th>
+                            </tr>
+                            {{ range .searchResults.Facets }}
+                                {{ range .Terms }}
+                                <tr>
+                                    <th scope="row">{{.Term}}</th>
+                                    <td class="right-align">{{.Count}}</td>
+                                </tr>
+                                {{ end }}
+                            {{ end }}
+                        </tbody>
+                        </table>
                     </div>
-                    {{ range .searchResults.Facets }}
-                    <div class="row text-center">
-                        <ul class="list-inline">
-                        {{ range .Terms }}
-                            <li>{{.Term}}:{{.Count}}</li>
-                        {{ end }}
-                        </ul>
-                    </div>
-                    {{ end }}
                 </div>
                 <div class="well search-result">
                     <div class="row">
@@ -59,8 +83,10 @@
                                     <dd>{{ mapGet .Fields "XML.Alias" }}</dt>
                                     <dt>Submission ID</dt>
                                     <dd>{{ mapGet .Fields "SubmissionId" }}</dt>
-                                    <dt>Publish Date</dt>
-                                    <dd>{{ timeFmt .Fields.Published "2006-01-02 15:04:05"}}</dt>
+                                    <dt>Receive Date</dt>
+                                    <dd>{{ timeFmt .Fields.Received "2006-01-02 15:04:05"}}</dt>
+                                    <dt>Visibility</dt>
+                                    <dd>{{ mapGet .Fields "Visibility"}}</dt>
                                     <dt>Description</dt>
                                     <dd>{{ mapGet .Fields "XML.Description" }}</dt>
                                 </dl>
@@ -75,6 +101,5 @@
                     </button>
                 </div>
             </div>
-        </form>
     </div>
 {{end}}
