--- a/web/views/accession.html
+++ b/web/views/accession.html
@@ -8,15 +8,17 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     		<div class="well search-result">
-        		<div class="input-group">
-        		<input type="text" class="form-control" placeholder="Search">
-			      <span class="input-group-btn">
-			        <button class="btn btn-info btn-default" type="button">
-                        <i class="glyphicon glyphicon-search"></i>
-                        Search
-                    </button>
-			      </span>
-			    </div>
+                <form action="/search">
+                    <div class="input-group">
+                    <input type="text" name="q" class="form-control" placeholder="Search">
+                      <span class="input-group-btn">
+                        <button class="btn btn-info btn-default" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                            Search
+                        </button>
+                      </span>
+                    </div>
+                </form>
         	</div>
             <div class="well search-result">
             	<div class="row">
