+ get the xml rendering to format well
  - the first line was introducing these odd whitespaces.

--- a/web/views/accession.html
+++ b/web/views/accession.html
@@ -95,11 +95,7 @@
                                 </tr>
                             </tbody>
                             </table>
-                            <pre>
-
-                            {{ .SRAItem.XML.XMLString }}
-
-                            </pre>
+                            <pre>{{ .SRAItem.XML.XMLString }}</pre>
                         </div>
                         <div class="clearfix">
                         </div>
