+ display correct result slice numbers on the search stats
  - made the number ranges to be 1-based
  - delegated to pagination and the template helper functions

--- a/web/views/search.html
+++ b/web/views/search.html
@@ -39,8 +39,8 @@
                             </tr>
                             <tr>
                                 <th scope="row">Result Slice</th>
-                                <td class="right-align">{{.searchResults.Request.From}} -
-                                    {{add .searchResults.Request.From .searchResults.Request.Size}}</td>
+                                <td class="right-align">{{.pagination.StartIndex}} -
+                                    {{minUint64 .pagination.EndIndex .searchResults.Total}}</td>
                             </tr>
                             <tr>
                                 <th colspan=2 class="table-header center-align col-md-6 col-lg-6">Groupings</th>
