+ correctly pluralize the facet group names
  - in the search stat section make the group names plural.
  - this seems more intuitive

--- a/web/views/search.html
+++ b/web/views/search.html
@@ -48,7 +48,7 @@
                             {{ range .searchResults.Facets }}
                                 {{ range .Terms }}
                                 <tr>
-                                    <th scope="row">{{.Term}}</th>
+                                    <th scope="row">{{pluralType .Term}}</th>
                                     <td class="right-align">{{.Count}}</td>
                                 </tr>
                                 {{ end }}
