+ always autofocus on the search bar
  - this makes the search pages a bit more "Google"-esque

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -3,7 +3,7 @@
           <div class="row bottom-buffer"><img src="/imgs/beaker.jpg"/></div>
           <form class="form col-md-12 center-block" action="/search">
             <div class="form-group">
-              <input type="text" name="q" class="form-control input-lg" placeholder="SRA Search">
+              <input type="text" name="q" class="form-control input-lg" placeholder="SRA Search" autofocus="autofocus">
             </div>
             <div class="form-group">
               <button class="btn btn-primary btn-lg btn-block">Search</button>
