--- a/web/views/search.html
+++ b/web/views/search.html
@@ -10,7 +10,7 @@
                 <div class="well search-result">
                     <form action="/search">
                         <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search" value="{{.Query}}">
+                        <input type="text" name="q" class="form-control" placeholder="Search" value="{{.Query}}" autofocus="autofocus">
                           <span class="input-group-btn">
                             <button class="btn btn-info btn-default" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
