+ enable a CLI option debug mode for the web command
  - only display the raw JSON result search query data structure when
    debug mode is enabled

--- a/web/views/search.html
+++ b/web/views/search.html
@@ -58,12 +58,13 @@
                     </div>
                 </div>
                 <div class="well search-result">
+                {{ if .Debug }}
+                <div class="well search-result">
                     <div class="row">
-                        <pre>
-                        {{.JsonStr}}
-                        </pre>
+                        <pre>{{.JsonStr}}</pre>
                     </div>
                 </div>
+                {{ end }}
                 {{ range .searchResults.Hits }}
                 <div class="well search-result">
                     <div class="row">
