+ make the search stats well condensed too
  - this may things easier to see

--- a/web/views/search.html
+++ b/web/views/search.html
@@ -21,7 +21,7 @@
                     </form>
                 </div>
                 <div class="well search-result">
-                    <div class="row">
+                    <div class="condensed-row">
                         <table class="table table-condensed borderless">
                             <thead>
                             <tr>
