+ make the side accession label fixed in position
  - this is useful as one is scrolling down the screen

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -233,7 +233,7 @@ body {
     -o-transform-origin: left top;
     transform: rotate(90deg);
     transform-origin: left top;
-    position: absolute;
+    position: fixed;
     white-space: nowrap;
 }
 
