+ more well/row futzing
  - I just cannot seem to get the top search stats and top pagination
    rows aligned to my likings.

--- a/web/views/search.html
+++ b/web/views/search.html
@@ -20,8 +20,8 @@
                         </div>
                     </form>
                 </div>
-                <div class="well search-result">
-                    <div class="condensed-row">
+                <div class="condensed-well search-result">
+                    <div class="row">
                         <table class="table table-condensed borderless">
                             <thead>
                             <tr>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 {{ if .searchResults.Total }}
-                <div class="well search-result">
+                <div class="condensed-well search-result">
                     <div class="condensed-row center-align">
                         <nav>
                             <ul class="pagination">
