--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -12,8 +12,8 @@ body {
 
 .condensed-row {
     margin-left: -15px;
-    margin-top: -6%;
-    margin-bottom: -5%;
+    margin-top: -1%;
+    margin-bottom: -2%;
 }
 
 .breadcrumb {
@@ -32,6 +32,24 @@ body {
     border: 0;
     padding: 5px;
     min-height: 53px;
+    background: #fff;
+    box-shadow: none;
+    border-radius: 3px;
+    position: relative;
+    max-height: 100000px;
+    border-bottom: 2px solid #ccc;
+    transition: max-height 0.5s ease;
+    -o-transition: max-height 0.5s ease;
+    -ms-transition: max-height 0.5s ease;
+    -moz-transition: max-height 0.5s ease;
+    -webkit-transition: max-height 0.5s ease;
+}
+.condensed-well {
+    border: 0;
+    padding: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    min-height: 63px;
     background: #fff;
     box-shadow: none;
     border-radius: 3px;
