+ make all search queries time range based
  Front End Changes
  =================
      - introduce bootstrap datepicker
        (https://github.com/dangrossman/bootstrap-daterangepicker)

      - introduce a time range bar on the search and index pages
      - make all the relevant search links include the "start" and "end"
        range parameters.

  Back End Changes
  ================

      - Have the search functions include the "start" and "end"
        parameters
      - make all the bleve search queries be conjunction queries that
        include a DateRangeQuery.

--- a/web/views/base/footer.html
+++ b/web/views/base/footer.html
@@ -1,4 +1,67 @@
 {{define "footer"}}
 <script src="/js/jquery.min.js" type="text/javascript"></script>
 <script src="/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/js/moment.min.js" type="text/javascript"></script>
+<script src="/js/daterangepicker.js" type="text/javascript"></script>
+<script type="text/javascript">
+$(function() {
+ 
+    {{ if and .Start .End }}
+        $('#reportrange span').html(moment({{.Start}}, "YYYY-MM-DD").format('MMMM D, YYYY') + ' - ' + moment({{.End}}, "YYYY-MM-DD").format('MMMM D, YYYY'));
+        $('#searchStart').val(moment({{.Start}}, "YYYY-MM-DD"));
+        $('#searchEnd').val(moment({{.End}}, "YYYY-MM-DD"));
+    {{else}}
+        $('#reportrange span').html(moment().subtract(7, 'days').format('MMMM D, YYYY') + ' - ' + moment().format('MMMM D, YYYY'));
+        $('#searchStart').val(moment().subtract(7, 'days').format('YYYY-MM-DD'));
+        $('#searchEnd').val(moment().format('YYYY-MM-DD'));
+    {{ end }}
+
+    $('#reportrange').daterangepicker({
+        format: 'YYYY-MM-DD',
+        startDate: moment().subtract(29, 'days'),
+        endDate: moment(),
+        minDate: '2007-01-01',
+        maxDate: '2020-12-31',
+//        dateLimit: { days: 60 },
+        showDropdowns: true,
+        showWeekNumbers: true,
+        timePicker: false,
+        timePickerIncrement: 1,
+        timePicker12Hour: true,
+        ranges: {
+           'Today': [moment(), moment()],
+           'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+           'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+           'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+           'This Month': [moment().startOf('month'), moment().endOf('month')],
+           'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
+           'Last 3 Months': [moment().subtract(3, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
+           'Last 6 Months': [moment().subtract(6, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
+           'Last Year': [moment().subtract(12, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
+        },
+        opens: 'left',
+        drops: 'down',
+        buttonClasses: ['btn', 'btn-sm'],
+        applyClass: 'btn-primary',
+        cancelClass: 'btn-default',
+        separator: ' to ',
+        locale: {
+            applyLabel: 'Confirm',
+            cancelLabel: 'Cancel',
+            fromLabel: 'From',
+            toLabel: 'To',
+            customRangeLabel: 'Custom',
+            daysOfWeek: ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr','Sa'],
+            monthNames: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
+            firstDay: 1
+        }
+    }, function(start, end, label) {
+        console.log(start.toISOString(), end.toISOString(), label);
+        $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+        $('#searchStart').val(start.format('YYYY-MM-DD'));
+        $('#searchEnd').val(end.format('YYYY-MM-DD'));
+    });
+ 
+});
+</script>
 {{end}}
