--- a/web/views/search.html
+++ b/web/views/search.html
@@ -9,6 +9,14 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 left-align">
                 <div class="well search-result">
                     <form action="/search">
+                        <div class="form-group center-align">
+                          <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+                              <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
+                              <span></span> <b class="caret"></b>
+                              <input id="searchStart" type="hidden" name="start" value="">
+                              <input id="searchEnd" type="hidden" name="end" value="">
+                          </div>
+                        </div>
                         <div class="input-group">
                         <input type="text" name="q" class="form-control" placeholder="Search" value="{{.Query}}" autofocus="autofocus">
                           <span class="input-group-btn">
@@ -63,21 +71,23 @@
                         <nav>
                             <ul class="pagination">
                                 {{ if .pagination.HasPrev }}
-                                        <li><a href="#">prev</a></li>
+                                    <li><a href="/search?start={{.Start}}&end={{.End}}&page={{add .pagination.Page -1}}&q={{.Query}}">prev</a></li>
                                 {{ end }}
                                 {{ $pagination := .pagination }}
                                 {{ $Query := .Query }}
+                                {{ $Start := .Start }}
+                                {{ $End := .End }}
                                 {{ range $page := .pagination.IterationSet }}
                                     {{ if eq $.pagination.Page $page }}
-                                    <li class="active"><a href="#">{{ $page }}</a></li>
+                                        <li class="active"><a href="#">{{ $page }}</a></li>
                                     {{ else if $page }}
-                                        <li><a href="/search?q={{$.Query}}&page={{ $page }}">{{ $page }}</a></li>
+                                        <li><a href="/search?start={{$.Start}}&end={{$.End}}&page={{ $page }}&q={{$.Query}}">{{ $page }}</a></li>
                                     {{ else }}
-                                    <li class="disabled"><a href="#">...</a></li>
+                                        <li class="disabled"><a href="#">...</a></li>
                                     {{ end }}
                                 {{ end }}
                                 {{ if .pagination.HasNext }}
-                                <li><a href="/search?q={{.Query}}&page={{add .pagination.Page 1}}">next</a></li>
+                                    <li><a href="/search?start={{.Start}}&end={{.End}}&page={{add .pagination.Page 1}}&q={{.Query}}">next</a></li>
                                 {{ end }}
                             </ul>
                         </nav>
@@ -129,21 +139,23 @@
                     <nav>
                         <ul class="pagination">
                             {{ if .pagination.HasPrev }}
-                                    <li><a href="#">prev</a></li>
+                                    <li><a href="/search?start={{.Start}}&end={{.End}}&page={{add .pagination.Page -1}}&q={{.Query}}">prev</a></li>
                             {{ end }}
                             {{ $pagination := .pagination }}
                             {{ $Query := .Query }}
+                            {{ $Start := .Start }}
+                            {{ $End := .End }}
                             {{ range $page := .pagination.IterationSet }}
                                 {{ if eq $.pagination.Page $page }}
-                                <li class="active"><a href="#">{{ $page }}</a></li>
+                                    <li class="active"><a href="#">{{ $page }}</a></li>
                                 {{ else if $page }}
-                                    <li><a href="/search?q={{$.Query}}&page={{ $page }}">{{ $page }}</a></li>
+                                    <li><a href="/search?start={{$.Start}}&end={{$.End}}&page={{ $page }}&q={{$.Query}}">{{ $page }}</a></li>
                                 {{ else }}
-                                <li class="disabled"><a href="#">...</a></li>
+                                    <li class="disabled"><a href="#">...</a></li>
                                 {{ end }}
                             {{ end }}
                             {{ if .pagination.HasNext }}
-                            <li><a href="/search?q={{.Query}}&page={{add .pagination.Page 1}}">next</a></li>
+                            <li><a href="/search?start={{.Start}}&end={{.End}}&page={{add .pagination.Page 1}}&q={{.Query}}">next</a></li>
                             {{ end }}
                         </ul>
                     </nav>
