--- a/web/views/accession.html
+++ b/web/views/accession.html
@@ -9,6 +9,14 @@
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     		<div class="well search-result">
                 <form action="/search">
+                    <div class="form-group center-align">
+                      <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+                          <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
+                          <span></span> <b class="caret"></b>
+                          <input id="searchStart" type="hidden" name="start" value="">
+                          <input id="searchEnd" type="hidden" name="end" value="">
+                      </div>
+                    </div>
                     <div class="input-group">
                     <input type="text" name="q" class="form-control" placeholder="Search" autofocus="autofocus">
                       <span class="input-group-btn">
