--- a/web/views/base/footer.html
+++ b/web/views/base/footer.html
@@ -1,6 +1,7 @@
 {{define "footer"}}
 <script src="/js/jquery.min.js" type="text/javascript"></script>
 <script src="/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/js/spinner-button.js" type="text/javascript"></script>
 <script src="/js/moment.min.js" type="text/javascript"></script>
 <script src="/js/daterangepicker.js" type="text/javascript"></script>
 <script type="text/javascript">
