--- a/web/views/search.html
+++ b/web/views/search.html
@@ -8,7 +8,7 @@
 	<div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 left-align">
                 <div class="well search-result">
-                    <form action="/search">
+                    <form id="search-form" action="/search">
                         <div class="form-group center-align">
                           <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
                               <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
@@ -20,10 +20,7 @@
                         <div class="input-group">
                         <input type="text" name="q" class="form-control" placeholder="Search" value="{{.Query}}" autofocus="autofocus">
                           <span class="input-group-btn">
-                            <button class="btn btn-info btn-default" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                                Search
-                            </button>
+                            <button class="btn btn-info btn-default" id="load" data-searching-text="<i class='fa fa-spinner fa-spin'></i> Search" type="button"><i class="glyphicon glyphicon-search"></i> Search</button>
                           </span>
                         </div>
                     </form>
