--- a/web/views/base/navbar.html
+++ b/web/views/base/navbar.html
@@ -12,11 +12,12 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/examples">Examples</a></li>
+            <li><a href="/examples">Recent Uploads</a></li>
           </ul>
         </li>
       </ul>
