--- a/web/views/index.html
+++ b/web/views/index.html
@@ -7,6 +7,8 @@
             </div>
             <div class="form-group">
               <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+                  <time id="range-start-time" datetime="{{.Start}}"></time>
+                  <time id="range-end-time" datetime="{{.End}}"></time>
                   <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
                   <span></span> <b class="caret"></b>
                   <input id="searchStart" type="hidden" name="start" value="">
