--- a/web/views/search.html
+++ b/web/views/search.html
@@ -50,7 +50,7 @@
                                     {{minUint64 .pagination.EndIndex .searchResults.Total}}</td>
                             </tr>
                             <tr>
-                                <th colspan=2 class="table-header center-align col-md-6 col-lg-6">Groupings</th>
+                                <th colspan=2 class="table-header center-align col-md-6 col-lg-6">Facets</th>
                             </tr>
                             {{ range .searchResults.Facets }}
                                 {{ range .Terms }}
