+ remove the useless links in the title sections
  - people seem to get sidetracked by these nowhere links.

--- a/web/views/accession.html
+++ b/web/views/accession.html
@@ -1,7 +1,7 @@
 {{define "body"}}
     <div class="starter-template">
     <ol class="breadcrumb">
-    	<li><a href="#">Accession</a></li>
+    	<li>Accession</li>
         <li><a href="http://ncbi.nlm.nih.gov/sra/{{.SRAItem.Id}}">{{.SRAItem.Id}}</a></li>
 		<li class="pull-right"><a href="" class="text-muted"><i class="fa fa-refresh"></i></a></li>
 	</ol>
