--- a/web/views/search.html
+++ b/web/views/search.html
@@ -1,8 +1,8 @@
 {{define "body"}}
     <div class="starter-template">
     <ol class="breadcrumb">
-    	<li><a href="#">Search</a></li>
-        <li><a href="#">Page {{ .pagination.Page }}</a></li>
+    	<li>Search</li>
+        <li>Page {{ .pagination.Page }}</li>
 		<li class="pull-right"><a href="" class="text-muted"><i class="fa fa-refresh"></i></a></li>
 	</ol>
 	<div class="row">
