--- a/web/views/search.html
+++ b/web/views/search.html
@@ -108,9 +108,9 @@
                         <a href="#">
                             <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
                                 <ul class="block">
-                                    <li class="submission {{.Fields.Type}}">
+                                    <li class="sra {{.Fields.Type}}">
                                         <div class="label">{{ incrementIdx $index $pagination.StartIndex}}</div>
-                                        <div class="submission-block">{{shortType $elem.Fields.Type}}</div>
+                                        <div class="sra-block">{{shortType $elem.Fields.Type}}</div>
                                         <div class="label">{{$elem.Fields.Type}}</div>
                                     </li>
                                 </ul>
