--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -8,6 +8,7 @@ body {
 }
 
 .top-buffer { margin-top:20px; }
+
 .bottom-buffer { margin-bottom:20px; }
 
 .condensed-row {
@@ -24,10 +25,12 @@ body {
     margin: 0 60px 15px;
     color: #333;
 }
+
 .search-result .title p {
     font-size: 12px;
     color: #333;
 }
+
 .header-well {
     border: 0;
     padding: 5px;
@@ -44,6 +47,7 @@ body {
     -moz-transition: max-height 0.5s ease;
     -webkit-transition: max-height 0.5s ease;
 }
+
 .condensed-well {
     border: 0;
     padding: 20px;
@@ -62,6 +66,7 @@ body {
     -moz-transition: max-height 0.5s ease;
     -webkit-transition: max-height 0.5s ease;
 }
+
 .well {
     border: 0;
     padding: 20px;
@@ -78,6 +83,7 @@ body {
     -moz-transition: max-height 0.5s ease;
     -webkit-transition: max-height 0.5s ease;
 }
+
 .form-control {
     height: 39px;
     padding: 10px;
@@ -111,55 +117,48 @@ body {
 .block-half {
   margin: 24px 0;
 }
-.submission {
+
+.sra {
   display: inline-block;
   height: 65px;
   width: 85px;
   margin: 0 25.5%;
   font-family: 'pt_sansbold', Helvetica, sans-serif;
 }
-.submission .label {
+
+.sra .label {
   color: #585c60;
   margin-top: 10px;
   text-align: center;
   font-weight: 600;
   padding-left: 0%
 }
-.submission.study .submission-block {
+
+.sra.study .sra-block {
   background: #e54f1f;
 }
-.submission.sample .submission-block {
-  background: #8394bd;
-}
-.submission.experiment .submission-block {
+
+.sra.sample .sra-block {
   background: #6cad5a;
 }
-.submission.run .submission-block {
-  background: #8cc64b;
+
+.sra.experiment .sra-block {
+  background: #8394bd;
 }
-.submission.analysis .submission-block {
-  background: #efbe3a;
-}
-.submission.ruby .submission-block {
+
+.sra.run .sra-block {
   background: #b11400;
 }
-.submission.scala .submission-block {
-  background: #b41703;
+
+.sra.analysis .sra-block {
+  background: #efbe3a;
 }
-.submission.java .submission-block {
-  background: #eb0000;
+
+.sra.submission .sra-block {
+  background: #000; 
 }
-.submission.latex .submission-block {
-  color: #000;
-}
-.submission.javascript .submission-block {
-  background: #f0dd44;
-  color: #4a4a4a;
-}
-.submission.groovy .submission-block {
-  background: #6297aa;
-}
-.submission-block {
+
+.sra-block {
   text-align: center;
   width: 100%;
   height: 100%;
@@ -172,55 +171,47 @@ body {
   text-align: center;
 }
 
-.panel
-{
+.panel {
     position: relative;
 }
 
-.panel-default > .panel-leftheading
-{
+.panel-default > .panel-leftheading {
     color: #333;
     background-color: #f5f5f5;
     border-color: #ddd;
 }
 
-.panel-primary > .panel-leftheading
-{
+.panel-primary > .panel-leftheading {
     color: #fff;
     background-color: #428bca;
     border-color: #428bca;
 }
 
-.panel-success > .panel-leftheading
-{
+.panel-success > .panel-leftheading {
     color: #3c763d;
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
 
-.panel-info > .panel-leftheading
-{
+.panel-info > .panel-leftheading {
     color: #31708f;
     background-color: #d9edf7;
     border-color: #bce8f1;
 }
 
-.panel-warning > .panel-leftheading
-{
+.panel-warning > .panel-leftheading {
     color: #8a6d3b;
     background-color: #fcf8e3;
     border-color: #faebcc;
 }
 
-.panel-danger > .panel-leftheading
-{
+.panel-danger > .panel-leftheading {
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
 }
 
-.panel-leftheading
-{
+.panel-leftheading {
     width: 42px;
     padding: 10px 15px;
     border-right: 1px solid transparent;
@@ -233,8 +224,7 @@ body {
     position: absolute;
 }
 
-.panel-lefttitle
-{
+.panel-lefttitle {
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 15px;
@@ -255,8 +245,7 @@ body {
     white-space: nowrap;
 }
 
-.panel-rightbody
-{
+.panel-rightbody {
     /* float: left; */
     margin-left: 45px;
     padding: 15px;
