+ introduce "Recent Uploads" link
  - now users can get the recent uploads, if the file exists

--- a/web/views/base/navbar.html
+++ b/web/views/base/navbar.html
@@ -17,7 +17,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/examples">Examples</a></li>
-            <li><a href="/examples">Recent Uploads</a></li>
+            <li><a href="/uploads">Recent Uploads</a></li>
           </ul>
         </li>
       </ul>
