+ move the javascript out of the base footer
  - place the javascript into the end route templates.

    Each routing end point has different needs.  They don't need all the
    javascript libraries, but only selected subsets.

    We can make rendering of the page faster by not including js that
    isn't used in the page.

--- a/web/views/404.html
+++ b/web/views/404.html
@@ -4,3 +4,8 @@
     <p>Don't know about path: <tt>{{.Path}}</tt> !</p>
 </div>
 {{end}}
+
+{{define "javascript"}}
+<script src="/js/jquery.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+{{end}}
