--- a/web/views/error.html
+++ b/web/views/error.html
@@ -4,3 +4,8 @@
     <p>{{.Error}}</p>
 </div>
 {{end}}
+
+{{define "javascript"}}
+<script src="/js/jquery.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+{{end}}
