--- a/web/views/index.html
+++ b/web/views/index.html
@@ -23,3 +23,12 @@
           </form>
     </div>
 {{end}}
+
+{{define "javascript"}}
+<script src="/js/jquery.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/js/spinner-button.js" type="text/javascript"></script>
+<script src="/js/moment.min.js" type="text/javascript"></script>
+<script src="/js/daterangepicker.js" type="text/javascript"></script>
+<script src="/js/sra-daterange-setup.js" type="text/javascript"></script>
+{{end}}
