--- a/web/views/search.html
+++ b/web/views/search.html
@@ -162,3 +162,12 @@
             </div>
     </div>
 {{end}}
+
+{{define "javascript"}}
+<script src="/js/jquery.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/js/spinner-button.js" type="text/javascript"></script>
+<script src="/js/moment.min.js" type="text/javascript"></script>
+<script src="/js/daterangepicker.js" type="text/javascript"></script>
+<script src="/js/sra-daterange-setup.js" type="text/javascript"></script>
+{{end}}
