+ replace the "Advanced Search" link
  - make the "Advanced Search" link point to the "Recent Uploads" page
  - enable the "Examples" link to point to the "Examples" page

--- a/web/views/index.html
+++ b/web/views/index.html
@@ -17,8 +17,8 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-primary btn-lg btn-block" id="load" data-searching-text="<i class='fa fa-spinner fa-spin'></i>Searching..." type="button">Search</button>
-              <span class="pull-right"><a href="#">Advanced Search</a></span>
-              <span class="pull-left"><a href="#">Examples</a></span>
+              <span class="pull-right"><a href="/uploads">Recent Uploads</a></span>
+              <span class="pull-left"><a href="/examples">Examples</a></span>
             </div>
           </form>
     </div>
