--- a/web/views/base/navbar.html
+++ b/web/views/base/navbar.html
@@ -16,6 +16,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
+            <li><a href="/about">About</a></li>
             <li><a href="/examples">Examples &amp; Docs</a></li>
             <li><a href="/uploads">Recent Uploads</a></li>
           </ul>
