--- a/web/views/accession.html
+++ b/web/views/accession.html
@@ -62,6 +62,10 @@
                                     <th scope="row">Visibility</th>
                                     <td>{{.SRAItem.Visibility}}</td>
                                 </tr>
+                                <tr>
+                                    <th scope="row">Issues</th>
+                                    <td>{{.SRAItem.Issues}}</td>
+                                </tr>
                             </tbody>
                             </table>
                             <h3 class="section-header">Relationships</h3>
