--- a/web/views/search.html
+++ b/web/views/search.html
@@ -128,6 +128,8 @@
                                     <dd>{{ mapGet $elem.Fields "Visibility"}}</dt>
                                     <dt>Description</dt>
                                     <dd>{{ mapGet $elem.Fields "XML.Description" }}</dt>
+                                    <dt>Search Score</dt>
+                                    <dd>{{ $elem.Score }}</dt>
                                 </dl>
                             </div>
                         </a>
