+ include the dates parameters on the accession pages
  - this way the users have a better overall UI experience when they
    transition from search to accession and back to search.

    However, the date params aren't really needed for the accession page
    itself.

--- a/web/views/accession.html
+++ b/web/views/accession.html
@@ -76,7 +76,7 @@
                                     {{ if eq .SRAItem.SubmissionId "-" }}
                                     <td>{{.SRAItem.SubmissionId}}</td>
                                     {{ else }}
-                                    <td><a href="/accession/{{.SRAItem.SubmissionId}}">{{.SRAItem.SubmissionId}}</a> / <a href="http://ncbi.nlm.nih.gov/sra/{{.SRAItem.SubmissionId}}">NCBI</a></td>
+                                    <td><a href="/accession/{{.SRAItem.SubmissionId}}?start={{ .Start }}&end={{ .End }}">{{.SRAItem.SubmissionId}}</a> / <a href="http://ncbi.nlm.nih.gov/sra/{{.SRAItem.SubmissionId}}">NCBI</a></td>
                                     {{ end }}
                                 </tr>
                                 <tr>
